syntax = "proto3";

package scyna;
option  java_package = "scyna.proto";
option  java_multiple_files = true;
option  csharp_namespace = "scyna.proto";
option  go_package = "./;scyna_proto";
option  optimize_for = CODE_SIZE;

message Configuration {
  string NatsUrl = 1;
  string NatsUsername = 2;
  string NatsPassword = 3;
  string DBHost = 4;
  string DBUsername = 5;
  string DBPassword = 6;
  string DBLocation = 7;
  string DBPemFile = 8;
  bool isAWSKeyspaces = 9;
}

/*session*/
message CreateSessionRequest {
  string Module = 1;
  string Secret = 2;
}

message CreateSessionResponse {
  uint64        SessionID = 1;
  Configuration Config = 5;
}

message EndSessionSignal {
  uint64 ID = 1;
  string Code = 2;
  string Module = 3;
}

message UpdateSessionSignal {
  uint64 ID = 1;
  string Module = 2;
}

